--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -4,8 +4,8 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.org.list">Cancel</a>
-		<a class="btn btn-xs btn-link" ui-sref="admin.org.edit({orgId: org._id})">Edit</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.organization.list">Cancel</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.organization.edit({orgId: org._id})">Edit</a>
 	</div>
 </div>
 
@@ -105,8 +105,8 @@
 		<hr>
 		
 		<div class="text-right">
-			<a class="btn btn-default" ui-sref="admin.org.list">Cancel</a>
-			<a class="btn btn-default" ui-sref="admin.org.edit({orgId: org._id})">Edit</a>
+			<a class="btn btn-default" ui-sref="admin.organization.list">Cancel</a>
+			<a class="btn btn-default" ui-sref="admin.organization.edit({orgId: org._id})">Edit</a>
 		</div>
 
 	</div>
