--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<button class="btn btn-xs btn-link" ui-sref="admin.org.list">Cancel</button>
+		<button class="btn btn-xs btn-link" ui-sref="admin.organization.list">Cancel</button>
 		<button class="btn btn-xs btn-link" href type="submit">Save</button>
 	</div>
 </div>
@@ -111,7 +111,7 @@
 		
 		<div class="row">
 			<div class="col-sm-12 text-right">
-				<button class="btn btn-default" ui-sref="admin.org.list">Cancel</button>
+				<button class="btn btn-default" ui-sref="admin.organization.list">Cancel</button>
 				<button class="btn btn-default" type="submit">Save</button>
 			</div>
 		</div>
