--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.org.create()">+ Add New Organization</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.organization.create()">+ Add New Organization</a>
 	</div>
 </div>
 
@@ -10,12 +10,12 @@
 	<div class="col-sm-12">
 		<section class="panel panel-default">
 			<table ng-table="tableParams" class="table table-condensed table-striped table-hover">
-				<tr ng-repeat="o in $data" ui-sref="admin.org.detail({orgId:o._id})" class="clickable">
+				<tr ng-repeat="o in $data" ui-sref="admin.organization.detail({orgId:o._id})" class="clickable">
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
 					<td data-title="'DBA'"  filter="{'companyDba':'text'}"   sortable="'companyDba'">{{o.companyDba}}</td>					
 					<td data-title="'Location'" filter="{'registeredIn':'text'}"    sortable="'registeredIn'" >{{o.registeredIn}}</td>
 					<td width="1%" class="text-right">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.org.edit({orgId:o._id})">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.organization.edit({orgId:o._id})">
 							<i class="glyphicon glyphicon-pencil"></i>
 						</a>
 					</td>
