--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -12,7 +12,7 @@
 						<a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>           
 					</div>
 					<span ng-if="footer.environment === 'EAO'">Environmental Assessment Office, Victoria BC</span>
-					<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Victoria BC</span>					
+					<span ng-if="footer.environment === 'MEM'">Mines Transparency</span>					
 				</div>
 			</div>
 		</div>
