--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -11,7 +11,7 @@
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 			<td title="'Name'"     filter="{'name':'text'}"     			sortable="'name'"   >{{o.name}}</td>
 			<td title="'Type'"     filter="{'type':'select'}" filter-data="projectList.types"    			sortable="'type'"   >{{o.type}}</td>
-			<td title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region}}</td>
+			<td title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region | regionName}}</td>
 			<td title="'Phase'"    filter="{'currentPhase.name':'text'}"   	sortable="'currentPhase.name'" >{{o.currentPhase.name}}</td>
 			<td ng-if="environment === 'EAO'" title="'Status'"   filter="{'status':'select'}" filter-data="projectList.status"  			sortable="'status'" >{{o.status}}</td>
 		</tr>
