Modifying Project List and Artifact List to use the new showFilter directive

--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,11 +1,7 @@
 <div class="row">
 	<div class="col-sm-6 col-sm-offset-6 text-right form-inline">
 		<div class="form-group">
-
-			<a href class="pull-right btn btn-sm btn-link" ng-click="s.showfilter = !s.showfilter">
-				<span ng-show="s.showfilter"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></span>
-				<span ng-show="!s.showfilter"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> <span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></span>
-			</a>
+			<show-filter x-toggle-filter="toggleFilter"></show-filter>
 		</div>
 		<div class="dropdown form-group" ng-if="!s.public">
 			<div class="input-group input-sm" data-toggle="dropdown">
@@ -23,7 +19,7 @@
 <div class="row">
 	<div class="col-sm-12">
 		<section class="panel panel-default">
-			<table ng-table="s.tableParams" show-filter="s.showfilter" class="table table-condensed table-hover	table-striped">
+			<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover	table-striped">
 				<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
 					<td data-title="'Type'"    filter="{'typeName':'text'}"     sortable="'typeName'"    >{{o.typeName}}</td>
 					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
