--- a/modules/recent-activity/client/views/recent-activity-edit.html
+++ b/modules/recent-activity/client/views/recent-activity-edit.html
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.recentActivity.list">Cancel</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.recentactivity.list">Cancel</a>
 		<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
 	</div>
 </div>
@@ -100,7 +100,7 @@
 		<hr>
 		
 		<div class="text-right">
-			<a class="btn btn-default" ui-sref="admin.recentActivity.list">Cancel</a>
+			<a class="btn btn-default" ui-sref="admin.recentactivity.list">Cancel</a>
 			<a class="btn btn-default" href ng-click="save()">Save</a>
 		</div>
 
