--- a/modules/utils/client/views/partials/select-array.html
+++ b/modules/utils/client/views/partials/select-array.html
@@ -2,6 +2,7 @@
 	<li ng-repeat="item in sourceArray track by $index">
 		<button class="btn btn-xs btn-block"
 			ng-class="{'btn-success': _.indexOf(selectedArray, item.id) > -1}"
-			ng-click="toggleArrayItem(item.id)">{{ item.title }}</button>
+			ng-click="toggleArrayItem(item.id)"
+			type="button">{{ item.title }}</button>
 	</li>
 </ul>
