Making show/hide filter toggle control consistent with other screens. Also showing a 'No records found' message, when there are no results

--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -2,15 +2,15 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ng-click="showfilter=!showfilter"><span ng-show="!showfilter">Show</span><span ng-show="showfilter">Hide</span> Filter</a>
 		<a class="btn btn-xs btn-link" ui-sref="admin.condition.create()">+ Add New Condition</a>
+		<show-filter x-toggle-filter="toggleFilter"></show-filter>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-sm-12">
 		<section class="panel panel-default">
-			<table ng-table="tableParams" show-filter="showfilter" class="table table-condensed table-hover">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.condition.detail({conditionId:o._id})" class="clickable">
 					<td data-title="'Sector'"  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="ptypes" >{{o.sector}}</td>
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'" >{{o.name}}</td>
@@ -21,6 +21,11 @@
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.condition.edit({conditionId:o._id})">
 						<i class="glyphicon glyphicon-pencil"></i>
 						</a>
+					</td>
+				</tr>
+				<tr ng-if="!$data || $data.length === 0">
+					<td colspan="6">
+						No records found.
 					</td>
 				</tr>
 			</table>
