--- a/modules/projects/client/views/project-partials/project-activities.html
+++ b/modules/projects/client/views/project-partials/project-activities.html
@@ -35,10 +35,10 @@
 			</div>
 			<div class="col-sm-4">
 
-				<a href
+<!-- 				<a href
 					ng-show="selectedPhase"
 					class="control-label pull-right"
-					ng-click="showNewMilestone = !showNewMilestone">Add Milestone</a>
+					ng-click="showNewMilestone = !showNewMilestone">Add Milestone</a> -->
 
 				<label class="control-label">Milestones</label>
 
@@ -65,11 +65,11 @@
 			</div>
 			<div class="col-sm-4">
 
-				<a href
+	<!-- 			<a href
 					ng-show="selectedMilestone"
 					class="control-label pull-right"
 					ng-click="showNewActivity = !showNewActivity">Add Activity</a>
-
+ -->
 				<label class="control-label">Activities</label>
 
 				<div ng-show="showNewActivity" class="well well-sm">
